Fixed broken css
checked and fixed the css

--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
 
 @font-face {
 	font-family: 'Poppins', sans-serif;
-	src: url(Fonts/Poppins/Poppins-Regular.ttf);
+	src: url(Fonts/Poppins-Regular.ttf);
 }
 
 body {
